Fix details summary arrow showing on mobile Edge

--- a/site/Styles/blog/_header.scss
+++ b/site/Styles/blog/_header.scss
@@ -18,10 +18,13 @@
 
 		&-button {
 			cursor: pointer;
-			list-style-type: none;
+			list-style: none;
 			color: $colour-brand;
 
-			&::-webkit-details-marker,
+			&::-webkit-details-marker {
+				display: none;
+			}
+
 			&::marker {
 				display: none;
 			}
